--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<! DOCTYPE.html>
+<html>
+   <head>
+      <meta charset="utf_8">
+     <title> Assignemnt Solution fo module 2 </title>
+   </head>
+<body>
+   <div> 
+     <p> OUR MENU </p>
+  </div>
+  <div>
+    <p1> CHIKEN </p1>
 
+     
+</body>
+</html> 
